--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
-  "dependencies": 
+  "dependencies": {
     "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/pwa": "^3.3.5",
     "bootstrap": "^4.5.2",
